# sentinelops

./: .env.example  .gitignore  Dockerfile  PROJECT_NOTES.md  README.md  check_alembic_version.py  check_table.py  deployment_readiness.md  docker-compose.yml  pyproject.toml  rollback_version.py  seed_one_event.py
alembic/: env.py
alembic/versions/: 174091ecfa5e_add_daily_summary_deliveries.py  1e5c7202c86c_add_daily_summary_deliveries_table.py  214644219862_add_anomalies_table.py  46ee09cd231d_extend_events_for_webhook_observability.py  7d108f3e7baa_widen_daily_summary_delivery_error_.py  8fd4c79dae8b_add_provider_event_id_to_events.py  9367c62be002_change_events_raw_to_jsonb.py  ab65a21103f2_create_events_table.py  bbaf3d863773_add_daily_summary_deliveries.py  fb505ab209c9_add_anomaly_status_timestamps.py
scripts/: dev.ps1
src/sentinelops/: main.py
src/sentinelops/api/: deps.py
src/sentinelops/api/v1/routers/: anomalies.py  (+1 more)
src/sentinelops/core/: anomaly_rules.py  anomaly_status.py  config.py  stripe_events.py
src/sentinelops/db/: init_db.py  session.py
src/sentinelops/integrations/stripe/: webhook.py
src/sentinelops/models/: anomaly.py  daily_summary_delivery.py  event.py
src/sentinelops/scripts/: init_db.py  run_daily_summary.py  run_rules.py  seed_demo_anomalies.py
src/sentinelops/services/: anomaly_lifecycle.py  events_ingest.py  rules_runner.py
src/sentinelops/services/notifications/: slack.py  templates.py
src/sentinelops/services/reporting/: __init__.py  aggregation.py  ai_insight.py  anomalies_query.py  compose.py  daily_summary.py
(+4 files in other folders)
